--- a/Bustracking.ipynb
+++ b/Bustracking.ipynb
@@ -2,34 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import gmaps\n",
     "import gmaps.datasets\n",
+    "import config\n",
     "# Try to move it to environement variables.\n",
-    "gmaps.configure(api_key=\"AIzaSyDuri7K7AXaKVDIl25un_7bp5bAKImScX4\")"
+    "gmaps.configure(api_key=config.api)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "8604"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.5/bin:/Users/pradeepsaiuppula/.rvm/gems/ruby-2.4.0/bin:/Users/pradeepsaiuppula/.rvm/gems/ruby-2.4.0@global/bin:/Users/pradeepsaiuppula/.rvm/rubies/ruby-2.4.0/bin:/Users/pradeepsaiuppula/bin:/usr/local/bin:/Library/Frameworks/Python.framework/Versions/3.5/bin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/Users/pradeepsaiuppula/.local/bin:/Users/pradeepsaiuppula/.rvm/bin\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "print(os.environ[\"PATH\"])"
+   ]
   },
   {
    "cell_type": "code",
